src/test/ui/consts/const-size_of_val-align_of_val-extern-type.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const-size_of_val-align_of_val-extern-type.rs:11:31
   |
LL | const _SIZE: usize = unsafe { size_of_val(&4 as *const i32 as *const Opaque) };
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `extern type` does not have known layout

error[E0080]: evaluation of constant value failed
  --> $DIR/const-size_of_val-align_of_val-extern-type.rs:12:32
   |
LL | const _ALIGN: usize = unsafe { min_align_of_val(&4 as *const i32 as *const Opaque) };
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `extern type` does not have known layout

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
